tests/class_statics/class_static_constructor.js
// @flow

class A {
  static constructor: Object; // error
}
